AIFF demux lock-up
The attached file causes a seemingly infinite loop in the AIFF demuxer
The attached file causes a seemingly infinite loop in the AIFF demuxer
added Component::Demuxers Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
Added attachment:
changed milestone to %2.2.5
assigned to @FilipRoseen-refp and unassigned @MigrationBot
added Status::fixed label
closed
VideoLAN code repository instance